--- a/src/components/allCatsList/style/AllCatsList.scss
+++ b/src/components/allCatsList/style/AllCatsList.scss
@@ -8,11 +8,11 @@
     &__item {
       position: relative;
       max-width: 225px;
-      transition: transform 0.3s ease, box-shadow 0.3s ease; 
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
 
       &:hover {
-        transform: scale(1.1); 
-        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); 
+        transform: scale(1.1);
+        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
       }
 
       img {
@@ -29,51 +29,59 @@
     right: 10px;
     z-index: 100;
     cursor: pointer;
-    transition: transform 0.3s ease; 
+    transition: transform 0.3s ease;
 
     &:hover {
-      transform: scale(1.1); 
+      transform: scale(1.1);
     }
   }
 }
-.mobile__cats{
+.mobile__cats {
   display: none;
 }
 
-@media (max-width:1450px){
-  .cats{
-    &__list{
-      grid-template-columns: repeat(4,1fr);
+@media (max-width: 1450px) {
+  .cats {
+    &__list {
+      grid-template-columns: repeat(4, 1fr);
     }
   }
 }
 
-@media (max-width:1100px){
-  .cats{
-    &__list{
-      grid-template-columns: repeat(3,1fr);
+@media (max-width: 1100px) {
+  .cats {
+    &__list {
+      grid-template-columns: repeat(3, 1fr);
     }
   }
 }
 
-@media (max-width:800px){
-  .cats{
-    &__list{
-      grid-template-columns: repeat(2,1fr);
+@media (max-width: 800px) {
+  .cats {
+    &__list {
+      grid-template-columns: repeat(2, 1fr);
+      @media (hover: hover) {
+        &__item:hover {
+          &:hover {
+            transform: scale(1.1);
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+          }
+        }
+      }
     }
   }
-  .mobile__cats{
-    display: block;
-  }
+}
+.mobile__cats {
+  display: block;
 }
 
 @media (max-width: 500px) {
   .cats {
     &__list {
       align-items: center;
-      justify-content: center; 
-      grid-template-columns: repeat(1, 1fr); 
-      max-width: 225px; 
+      justify-content: center;
+      grid-template-columns: repeat(1, 1fr);
+      max-width: 225px;
       margin: 0 auto;
     }
   }
