--- a/src/components/pagination/style/Pagination.scss
+++ b/src/components/pagination/style/Pagination.scss
@@ -1,9 +1,9 @@
-
-.pagination__text{
-    text-align: center;
-    padding-top: 10px;
-    p{
-        font-size:20px;
-        font-weight: 'Roboto',serif;
-    }
+.pagination__text {
+  text-align: center;
+  padding-top: 10px;
+  p {
+    font-size: 20px;
+    font-family: "Roboto", serif;
+    font-weight: 400;
+  }
 }
